# snu_retrieval

./: .gitignore  Makefile  Prompt.md  README.md  citation_info.yaml  eval.yaml  pyproject.toml  train.yaml
conf/: config.yaml  specter2_conf.yaml
datasets/: Sample Rows from JupyterLab.json  refined_triplet.json  spec0_test.json  spec0_val.json
jupyter/: bm25.ipynb  scibert_performance.ipynb  scibert_performance_with_pooling.ipynb  scibert_scincl_specter2_performance.ipynb  scibert_scincl_specter2_performance_final.ipynb  specter2-finetune-with-failure-case.ipynb  specter2-finetune.ipynb  specter2_finetuned_performance.ipynb
src/augmentation/: augmentation.py  citation_info.json  extracting_sentence.py  filtered_citation_info.json  filtering.py  main.py  utils.py
src/augmentation/jsons/: filtered_citation_info_with_query.json
src/data_augmentation/: Prompt.md  README.md  data_augmentation.yaml  extracting_ctss.py  extracting_ctss.yaml  llm.py  llm_by_huggingface.py  main.py  prompt.py  query_generator.py  repl_py_file_for_data_preprocessing.py
src/finetune_pipeline/: README.md
src/notebooks/: check-litsearch.ipynb  dpr_test3.ipynb
src/refactored_pipeline/: baseline.py  finetune.py
src/specter2/: calculate_tokens.py  data.py  evaluate.py  model.py  retrieval.py  train_and_save.py  trainer.py
src/specter2/model/: loss.py  (+1 more)
src/utils/: io_utils.py  save_model_to_vesslai.py
vessl/: augmentation.yaml  citation_info.yaml  data_augmentation.yaml  eval.yaml  extracting_ctss.yaml  filtering_citation_info.yaml  filtering_data.yaml  saving_qwen3.yaml  train.yaml
(+76 files in other folders)
