[project]
name = "specter2"
version = "0.1.0"
description = ""
authors = [{ name = "goranikin", email = "goranikin@snu.ac.kr" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "transformers (>=4.48.3,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "adapters (>=1.1.1,<2.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ruff>=0.11.10",
    "hydra-core>=1.3.2",
    "vessl>=0.1.197",
]

[tool.ruff]
exclude = ["jupyter"]

[dependency-groups]
dev = ["ty>=0.0.1a4"]
